CJAX 5.4

Support for keypress event
Ability for url element values to process Js modifiers and functions.



CJAX 5.3-Obama2012
Nov 2nd, 2012
Maintenance Release

* New Autocomplete plugin
* Ability for wait() function to process milliseconds
* Implemented new release "code name" policy
	This means that a code name will be used for each release or the same code name for a series of releases.
* Uploadify plugin was updated to uploadify 3.2
* Fixed bug that cut off parameters if two slashes were passed in the URL.
* Other improvements & small fixes

CJAX. 5.2-Stable
Maintenance Release
October 29, 2012

* Support to change lable element
* Improved Select API, now can specify a default value
* Changed AJAX_CD cookie deletion
* Added Support for Exec events on Plugins.

CJAX 5.1-Stable
September 16, 2012

Maintenance release


* New usage for Exec events:

	$ajax->click($element_id, $actions);
	$ajax->change($element_id, $actions);
	$ajax->keyup($element_id, $actions);
	$ajax->keydown($element_id, $actions);
	$ajax->blur($element_id, $actions);
	
	This is alternative replacement wrapper of the clasic:
	
	$ajax->Exec();
	
* Multiple APIs now work on overlays callbacks
  for example you may use Cjax in overlays elements
  Eg:
  
	$overlay = $ajax->overlay('resources/html/login.html');
	
	//work within the scope of the overlay (elements in resources/html/login.html)
	
	//would change the title of the page to whatever you type in a text field on the overlay!.
	$overlay->keyup('field1', $ajax->document('title','|field1|'));
	
	//submit ajax-form in the overlay
	$overlay->click('button1', $ajax->form('ajax.php?ajax_login/handler'));
	
	//assign the overlay to an element so when you click on it, the overlay pops
	$ajax->click('a_login', $overlay);
	
  On 5.0, this was limited to 1 single API. Now you may add as many as you want.
  
* Minor improvements & minor bugs fixed
* Expanded the number of parameters you can pass from a to f to a to z.