@@ -201,7 +201,7 @@ h4 {
 	<h3>Plugins</h3>
 		<ul>
 			<li>
-				<a href="plugin_upload_files.php"  target="_blank">Ajax Upload Files</a>
+				<a href="plugin_uploader.php"  target="_blank">Ajax Upload Files</a>
 			</li>
 			<li>
 				<a href="plugin_autocomplete.php"  target="_blank">Autocomplete</a>
